--- a/templates/register.html
+++ b/templates/register.html
@@ -45,6 +45,61 @@
                     {% else %}
                         {{ form.confirm_password(class="form-control form-control-lg") }}
                     {% endif %}
+                    <div class="form-group">
+                        {{ form.first_name.label(class="form-control-label") }}
+
+                        {% if form.first_name.errors %}
+                            {{ form.first_name(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.first_name.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.first_name(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                     <div class="form-group">
+                        {{ form.last_name.label(class="form-control-label") }}
+
+                        {% if form.last_name.errors %}
+                            {{ form.last_name(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.first_name.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.last_name(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.school.label(class="form-control-label") }}
+                        {% if form.school.errors %}
+                            {{ form.school(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.school.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.school(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                     <div class="form-group">
+                        {{ form.grade.label(class="form-control-label") }}
+
+                        {% if form.grade.errors %}
+                            {{ form.grade(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.grade.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.grade(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
                 </div>
 
             </fieldset>
